# cs225A-Limbot

./: CMakeLists.txt  dump.rdb
model/test_objects/meshes/visual/: HA.mtl
stanbot_angle_choosing/: CMakeLists.txt  simviz_demo_ac.cpp  world.urdf
stanbot_example/: CMakeLists.txt  avatar.urdf  avatar_controller.cpp  controller.cpp  controller_2_states.cpp  limbo attempt 1.urdf  limbo_actuation_controller.cpp  limboactuation.urdf  redis_keys.h  simviz.cpp  stanbot.urdf  stanbot_ashley.urdf  world_stan.urdf
stanbot_example/archive/: controller_broken.cpp  controller_broken2.cpp  controller_broken4.cpp  controller_rightfootmoves.cpp
stanbot_practice/: controller.cpp  world_stan.urdf
